--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HOST="localhost"
+HOST="db4free.net:3306"
 DBNAME="cogip_project"
-USER="root"
-PASSWORD="root"
+USER="keller6"
+PASSWORD="Le_Mot_De_Passe_:_Cogip_Project_Keller_6"
